bin/testsuite/tests/compiler/src/errors/compiler4902.swg
#global testerror "Err0499"
#dependencies
{
}
